# kitfly

./: Cargo.toml  README.md
assets/: planes.cfg
assets/plane0/: scene.gltf
assets/plane1/: scene.gltf
assets/plane5/: license.txt  scene.gltf
assets/plane6/: license.txt  scene.gltf
src/: args.rs  capture.rs  controls.rs  kitty.rs  main.rs  plane_config.rs  scene.rs  terminal.rs
