[package]
name = "kitfly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bevy = { version = "~0.19.0-rc.2", default-features = false, features = ["3d", "jpeg"] }
clap = { version = "4.6", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
flate2 = "1.1"
