[package]
name = "kitfly"
version = "0.1.0"
edition = "2024"
description = "Fly 3D airplane inside Terminal"
license = "Apache-2.0"
repository = "https://github.com/wensheng/kitfly"
readme = "README.md"
keywords = ["cli", "utility", "image", "3d"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bevy = { version = "~0.19.0-rc.2", default-features = false, features = ["3d", "jpeg"] }
clap = { version = "4.6", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
flate2 = "1.1"
